@@ -1,5 +1,11 @@
 2017-01-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* interpret.h (Op_arrayfor_init): Protect against string overrun
+	on sorting method.
+	(Op_indirect_func_call): Terminate function name.
+
+2017-01-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* str_array.c (env_remove): Terminate string before calling unsetenv.
 
 2017-01-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
